--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.8
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.99.1
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -18,6 +19,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 sniffio==1.3.1
+SQLAlchemy==2.0.39
 starlette==0.27.0
 typing_extensions==4.12.2
 ujson==5.10.0
