--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 anyio==4.8.0
+boto3==1.37.11
+botocore==1.37.11
 certifi==2025.1.31
 click==8.1.8
 dnspython==2.7.0
@@ -12,17 +14,22 @@ httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
 MarkupSafe==3.0.2
 orjson==3.10.15
 pydantic==1.10.21
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+s3transfer==0.11.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.39
 starlette==0.27.0
 typing_extensions==4.12.2
 ujson==5.10.0
+urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
