--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==4.8.0
+bcrypt==4.3.0
 boto3==1.37.11
 botocore==1.37.11
 certifi==2025.1.31
@@ -17,6 +18,7 @@ Jinja2==3.1.6
 jmespath==1.0.1
 MarkupSafe==3.0.2
 orjson==3.10.15
+passlib==1.7.4
 pydantic==1.10.21
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
