--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.15.1
 anyio==4.8.0
 bcrypt==4.3.0
 boto3==1.37.11
@@ -19,6 +20,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jmespath==1.0.1
+Mako==1.3.9
 MarkupSafe==3.0.2
 orjson==3.10.15
 passlib==1.7.4
