--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Mako==1.3.9
 MarkupSafe==3.0.2
 orjson==3.10.15
 passlib==1.7.4
+psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==1.10.21
