--- a/compose.yml
+++ b/compose.yml
@@ -4,17 +4,6 @@ version: '3'
 
 services:
 
-  api:
-    build: .
-    container_name: blog-fastapi
-    ports:
-      - "8000:8000"
-    env_file:
-      - .env
-    volumes:
-      - .:/code
-  
-
   postgres-database:
     container_name: api_db
     image: postgres:13.4-alpine
@@ -29,6 +18,21 @@ services:
       - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  api:
+    build: .
+    container_name: blog-fastapi
+    depends_on:
+      - postgres-database
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    volumes:
+      - .:/code
+  
+
+
   
 
   pgadmin:
