--- a/compose.yml
+++ b/compose.yml
@@ -13,7 +13,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
-    restart: always
+    # restart: always
     ports:
       - 5432:5432
     volumes:
@@ -38,7 +38,7 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     container_name: blogfast_pgadmin
-    restart: always
+    # restart: always
     ports:
       - "8888:80"
     environment:
