--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2025.1.31
 cffi==1.17.1
 click==8.1.8
 cryptography==44.0.2
+Deprecated==1.2.18
 dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
@@ -20,9 +21,11 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jmespath==1.0.1
+limits==4.7.2
 Mako==1.3.9
 MarkupSafe==3.0.2
 orjson==3.10.15
+packaging==24.2
 passlib==1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
@@ -36,6 +39,7 @@ PyYAML==6.0.2
 rsa==4.9
 s3transfer==0.11.4
 six==1.17.0
+slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.39
 starlette==0.27.0
@@ -46,3 +50,4 @@ uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
 websockets==15.0.1
+wrapt==1.17.2
